--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Sharon S. Wang"
 logo: "Headshot-2018-square.jpeg"
 
 ## Contact Info
-**Email:** [sharonwang.ssw@gmail.com](mailto:sharonwang.ssw@gmail.com)
+**"Email:"** ["sharonwang.ssw@gmail.com"](mailto:sharonwang.ssw@gmail.com)
 
 **Phone:** \(812\)-390-0296
 
