--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-minimal
-title: "Sharon S. Wang"
-description: "Sharon S. Wang"
+title: Sharon S. Wang
 logo: "Headshot-2018-square.jpeg"
 
