correcting file type

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Sharon S. Wang
-logo: "edited(circular)-20230126_Sharon Wang_24.jpg"
+logo: "edited(circular)-20230126_Sharon Wang_24.png"
 
