--- a/_config.yml
+++ b/_config.yml
@@ -26,38 +26,26 @@ author:
   avatar           : "edited(circular)-20230126_Sharon Wang_24.png"
   name             : "Sharon S. Wang"
   pronouns         : "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Clinical Psychology doctoral candidate"
   location         : "Seattle, WA"
   employer         : "University of Washington"
-  uri              : # URL
-  email            : "none@example.org" 
+  email            : "sharonwang.ssw@gmail.com" 
 
   # Academic websites
-  academia         : # URL
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  inspire-hep      : # URL
-  impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
-  semantic         : # URL
-  ssrn             : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
-  zotero           : # URL
-
+  googlescholar    : "https://scholar.google.com/citations?user=wJTpM58AAAAJ&hl=en"
+  orcid            : "https://orcid.org/0000-0003-3624-6697"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # Username
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
