removing extraneous folders

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,27 +8,15 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+  - title: "Research"
+    url: /research/
+
   - title: "Publications"
     url: /publications/
 
   - title: "Presentations"
-    url: /talks/    
-
-#  - title: "Teaching"
-#    url: /teaching/    
-    
-#  - title: "Portfolio"
-#    url: /portfolio/
-        
-#  - title: "Blog Posts"
-#    url: /year-archive/
-    
-# - title: "CV"
-#    url: /cv/
+    url: /presentations/
     
   - title: "CV"
     url: https://docs.google.com/document/d/1HALVXAWMI0qIH7h0kzLMshFTEhNcD-u98blQm_V6tig/edit?usp=sharing
-
-    
-#  - title: "Guide"
-#    url: /markdown/
+ 
