--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "edited(circular)-20230126_Sharon Wang_24.png"
   name             : "Sharon S. Wang"
   pronouns         : "she/her"  
-  bio              : "Clinical Psychology doctoral candidate"
+  bio              : "Clinical Psychology Doctoral Candidate"
   location         : "Seattle, WA"
   employer         : "University of Washington"
   email            : "sharonwang.ssw@gmail.com" 
